<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:layout_gravity="center"
    android:layout_marginTop="50dp">


    <Button
        android:text="@string/addCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addCategoryButton"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_row="0"
        android:layout_column="0" />

    <Button
        android:text="@string/newExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addExpenseButton"
        android:layout_margin="10dp"
        android:layout_row="0"
        android:layout_column="1"
        android:gravity="center" />

    <Button
        android:text="@string/seeExpenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seeExpensesButton"
        android:layout_margin="10dp"
        android:layout_row="1"
        android:layout_column="0"
        android:gravity="center" />

    <Button
        android:text="@string/analyseExpenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/analyseExpenses"
        android:layout_margin="10dp"
        android:layout_row="1"
        android:layout_column="1"
        android:gravity="center" />

</GridLayout>
