<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_add_category"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/euro_back"
    android:layout_column="2"
    tools:context="gr.teilar.scrooge.AddCategoryActivity">


    <TextView
        android:text="@string/category_name"
        style="@style/TextViewStyleCategory"
        android:id="@+id/categoryNameTextView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/category_name"
        android:ems="10"
        android:id="@+id/categoryNameEditText" />

    <TextView
        android:text="@string/category_description"
        style="@style/TextViewStyleCategory"
        android:id="@+id/categoryDescriptionTextView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textLongMessage"
        android:hint="@string/category_description"
        android:ems="10"
        android:id="@+id/categoryDescriptionEditText" />

    <Button
        android:text="@string/add_category"
        android:id="@+id/addCategoryButton"
        style="@style/ButtonStyle"/>
</LinearLayout>
